--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="styles.css">
     <title>Alessandra Cruz Portfolio</title>
 </head>
 <body>
-    this is my portfolio website
-
+    <nav>
+      <ul>
+        <li><a href = "index.html">Home</a></li>
+        <li><a href = "portfolio.html">Portfolio</a></li>
+        <li><a href = "about.html">About</a></li>
+        <li><a href = "contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <img src="images/Hero.jpg" alt="desk background" title="Hero Image of desk with stationary supplies."/>
+    <div>
+      <a href="https://github.com/Alesspop" target="_blank"><img src="images/GitHub.png" class="footer-logos" alt="github logo" title="github logo link"/></a>
+      <a href="https://www.linkedin.com/in/alessandra-c-7b5994204/" target="_blank"><img src="images/linkedin.png" class="footer-logos" alt="linkedin logo" title="linkedin logo link" width="64px" height="64px"/></a>
+    </div> 
 </body>
 </html>
