--- a/about.html
+++ b/about.html
@@ -38,12 +38,16 @@
           <ul class="skills">
               <li>Photoshop</li>
               <li>Illustrator</li>
-              <li>Adobe</li>
-              <li>HTML</li>
-              <li>WordPress</li>
+              <li>Adobe XD</li>
               <li>InDesign</li>
-              <li>MicrosoftWord</li>
+              <li>Dreamweaver</li>
+              <li>HTML 5</li>
               <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Bootstrap</li>
+              <li>Visual Studio Code</li>
+              <li>WordPress</li>
+              <li>MicrosoftWord</li>
           </ul>
       </div>
       </section>
