--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href = "contact.html">Contact</a></li>
       </ul>
     </nav>
-    <img src="images/Hero.jpg" alt="desk background" title="Hero Image of desk with stationary supplies."/>
+    <img src="images/Hero.jpg" id="heroimg" alt="desk background" title="Hero Image of desk with stationary supplies."/>
     <div>
       <a href="https://github.com/Alesspop" target="_blank"><img src="images/GitHub.png" class="footer-logos" alt="github logo" title="github logo link"/></a>
       <a href="https://www.linkedin.com/in/alessandra-c-7b5994204/" target="_blank"><img src="images/linkedin.png" class="footer-logos" alt="linkedin logo" title="linkedin logo link" width="64px" height="64px"/></a>
